css/main.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

body {
    font-family: sans-serif;
    background-color: #f0f7fa;
    color: #335566;
    transition: background-color .2s ease;
    user-select: none;

    &.dark {
        background-color: #1a2a33;

        #ui-wrapper {
            .functions-wrap {
                .function {
                    .step {
                        background-color: rgba(255,255,255,.05);
                        border-color: #474f54;

                        &.selected {
                            outline-color: #73add2;
                        }

                        &:not([data-color]),
                        &[data-color=""] {
                            color: white;
                        }
                    }

                    span {
                        color: white;
                    }
                }
            }

            .timeline {
                .step {
                    background-color: rgba(255,255,255,.05);
                    border-color: #474f54;

                    &[data-color="0"] {
                        color: white;
                    }

                    &:first-child {
                        outline-color: #73add2;
                    }
                }

                &::after {
                    background: linear-gradient(to right, transparent, #1a2a33);
                }
            }

            .tools {
                .row {
                    >div {
                        background-color: #2b4554;
                        color: white;
                        box-shadow: 0 4px 0px #18262f;
                    }
                }
            }
        }
    }
}

.toggle-dark {
    position: absolute;
    top: 8px;
    right: 8px;
    padding: 8px;
    cursor: pointer;
    opacity: .2;

    &:hover {
        opacity: 1;
    }
}

main {
    display: flex;
    flex-flow: row wrap;
    height: 100%;
}

#canvas-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    overflow: hidden;

    #editor-tools {
        position: absolute;
        bottom: 0;
        z-index: 1;
        padding: 32px;

        .row {
            display: flex;
            justify-content: center;
            align-items: center;
            border: 1px solid rgba(0,0,0,.3);
            
            > div {
                display: flex;
                justify-content: center;
                align-items: center;
                width: 48px;
                height: 48px;
                text-align: center;

                &:not(:last-child) {
                    border-right: 1px solid rgba(0,0,0,.3);
                }

                &.selected {
                    outline: 3px solid black;
                    z-index: 1;
                }

                &[data-tool="star"] {
                    background: #eaebed url(../img/star.jpg) center center / 80% 80% no-repeat;
                }

                &[data-tool="hero"] {
                    background: #eaebed url(../img/hero.jpg) center center / 80% 80% no-repeat;
                }
            }
        }
    }
}

#ui-wrapper {
    padding: 64px;
    width: 50%;
    display: flex;
    flex-flow: column;
    justify-content: center;

    .functions-wrap {
        padding: 8px;
        display: flex;
        flex-flow: column wrap;
        justify-content: center;
        align-items: center;

        .function {
            display: flex;
            align-items: center;

            &:not(:last-child) {
                margin-bottom: 8px;
            }

            [class^="step"] {
                cursor: pointer;
                background-color: #f2f3f4;
                transition: border-color .2s ease;

                &.selected {
                    outline: 3px solid black;
                    z-index: 1;

                    ~ .delete {
                        opacity: .2;
                        pointer-events: all;

                        &:hover {
                            opacity: 1;
                        }
                    }
                }

                &[data-tool^="f"] {
                    text-transform: uppercase;
                    font-size: 12px;
                    font-weight: bold;
                }

                &.step-add {
                    opacity: .2;

                    &::after {
                        content: "+";
                    }

                    &:hover {
                        opacity: .7;
                    }
                }
            }

            span {
                display: inline-block;
                width: 16px;
                margin-right: 8px;
                text-transform: uppercase;
                font-size: 12px;
                font-weight: bold;
                opacity: .5;
                transition: color .2s ease;
            }

            .delete {
                width: 40px;
                height: 40px;
                display: flex;
                justify-content: center;
                align-items: center;
                cursor: pointer;
                pointer-events: none;
                opacity: 0;

                &::after {
                    content: "✕";
                    font-weight: bold;
                    font-size: 12px;
                    color: rgba(0,0,0,.8);
                }
            }
        }
    }

    .timeline {
        position: relative;
        height: 56px;
        display: flex;
        padding: 8px;
        overflow: hidden;

        &.hidden {
            opacity: 0;
        }

        &::after {
            content: "";
            position: absolute;
            top: 0;
            right: 0;
            width: 64px;
            height: 100%;
            background: linear-gradient(to right, transparent, #f0f7fa);
        }

        .step {
            flex: 0 0 40px;

            &:first-child {
                outline: 3px solid black;
                z-index: 1;
            }

            &[data-tool^="f"] {
                text-transform: uppercase;
                font-size: 12px;
                font-weight: bold;
            }
        }
    }

    [class^="step"] {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 40px;
        height: 40px;
        margin-left: -1px;
        border: 1px solid rgba(0,0,0,.3);
        box-shadow: 0 3px 0 rgba(0,0,0,.1);
        color: black;
    }

    .tools {
        .row {
            display: flex;
            justify-content: center;
            margin: 8px;
            padding-top: 4px;
            overflow: hidden;

            > div {
                box-sizing: content-box;
                width: 40px;
                height: 40px;
                margin: 0 8px;
                background-color: white;
                border-radius: 4px;
                box-shadow: 0 4px 0px rgba(50,70,100,.06);
                display: flex;
                justify-content: center;
                align-items: center;
                cursor: pointer;
                transform: translateY(-4px);
                transition: all .1s ease;

                // &:hover {
                //     transform: translateY(-2px);
                //     box-shadow: 0 2px 0px rgba(50,70,100,.06);
                // }

                &:active {
                    transform: translateY(0px);
                    box-shadow: 0 0px 0px rgba(50,70,100,.06);
                }

                &.color {
                    &[data-color="2"] {
                        box-shadow: 0 4px 0px #40ab2b;

                        &:active {
                            box-shadow: 0 0 0 #40ab2b;
                        }
                    }

                    &[data-color="3"] {
                        box-shadow: 0 4px 0px #1495ff;

                        &:active {
                            box-shadow: 0 0 0 #1495ff;
                        }
                    }

                    &[data-color="4"] {
                        box-shadow: 0 4px 0px #cc9c00;

                        &:active {
                            box-shadow: 0 0 0 #cc9c00;
                        }
                    }

                    &[data-color="5"] {
                        box-shadow: 0 4px 0px #a219e6;

                        &:active {
                            box-shadow: 0 0 0 #a219e6;
                        }
                    }
                }

                &[data-tool^="f"] {
                    text-transform: uppercase;
                    font-size: 12px;
                    font-weight: bold;
                }
            }
        }
    }
}

[data-color="1"] {
    background-color: #edeeef !important;
}

[data-color="2"] {
    background-color: #50ce55 !important;
}

[data-color="3"] {
    background-color: #47adff !important;
}

[data-color="4"] {
    background-color: #ffc107 !important;
}

[data-color="5"] {
    background-color: #c44dff !important;
}

[data-tool="forward"] {
    &::after {
        content: "↑" !important;
    }
}

[data-tool="right"] {
    &::after {
        content: "↻";
    }
}

[data-tool="left"] {
    &::after {
        content: "↻";
        transform: scaleX(-1);
    }
}

[data-tool^="f"] {
    &::after {
        content: attr(data-tool);
    }
}

